# DobavkiTGBot

./: docker-compose.yml  pyproject.toml
backend/: scraping.py
backend/database/: models.py
